<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/home_dest">


    <fragment
        android:id="@+id/home_dest"
        android:name="coop.qrsc.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment">

        <action
            android:id="@+id/next_action_customer_button"
            app:destination="@+id/map_dest" />
        <action
            android:id="@+id/next_action_driver_button"
            app:destination="@+id/map_dest" />
    </fragment>


    <fragment
        android:id="@+id/map_dest"
        android:name="coop.qrsc.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/map_fragment" />

    <fragment
        android:id="@+id/emailPassword_dest"
        android:name="coop.qrsc.EmailPasswordFragment"
        android:label="@string/emailPassword"
        tools:layout="@layout/emailpassword_fragment" />

</navigation>